--- a/comp-mng-client/src/app/app.component.html
+++ b/comp-mng-client/src/app/app.component.html
@@ -1,7 +1,4 @@
-<clr-alert [clrAlertAppLevel]="true">
-  <clr-alert-item>
-    <span class="alert-text">
-      Congratulations, you have installed Clarity!
-    </span>
-  </clr-alert-item>
-</clr-alert>
+<clr-main-container>
+  <app-app-header></app-app-header>
+  <router-outlet></router-outlet>
+</clr-main-container>
