--- a/comp-mng-client/src/app/components/login/login.component.html
+++ b/comp-mng-client/src/app/components/login/login.component.html
@@ -1,1 +1,27 @@
+<div class="login-wrapper">
+  <form class="login" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <section class="title">
+      <h3 class="welcome">Strijd in competities met je favoriete sportteams!</h3>
+      <h5 class="hint">Kan jij de uitkomst voorspellen?</h5>
+    </section>
 
+    <div class="login-group">
+      <clr-input-container>
+        <label class="clr-sr-only">Gebruikersnaam</label>
+        <input type="text" name="username" clrInput placeholder="username" formControlName="username"/>
+      </clr-input-container>
+
+      <clr-password-container>
+        <label class="clr-sr-only">Wachtwoord</label>
+        <input type="password" name="password" clrPassword placeholder="wachtwoord" formControlName="password"/>
+      </clr-password-container>
+
+      <div *ngIf="isBadCred" class="error active">
+        Onjuiste gebruikersnaam of wachtwoord
+      </div>
+
+      <button type="submit" class="btn btn-primary">Log in</button>
+
+    </div>
+  </form>
+</div>
