--- a/comp-mng-client/src/app/app.component.html
+++ b/comp-mng-client/src/app/app.component.html
@@ -1,4 +1,6 @@
-<clr-main-container>
+<div class="main-container">
   <app-app-header></app-app-header>
-  <router-outlet></router-outlet>
-</clr-main-container>
+  <div class="content-container clr-justify-content-center">
+    <router-outlet></router-outlet>
+  </div>
+</div>
