--- a/comp-mng-client/src/app/components/sports-tab/sports-tab.component.html
+++ b/comp-mng-client/src/app/components/sports-tab/sports-tab.component.html
@@ -1,5 +1,7 @@
-<clr-tabs>
-  <clr-tab *ngFor="let name of sport_names;">
-    <button clrTabLink>{{name}}</button>
-  </clr-tab>
-</clr-tabs>
+<div class="clr-row clr-justify-content-center">
+  <clr-tabs>
+    <clr-tab *ngFor="let name of sport_names;">
+      <button clrTabLink>{{name}}</button>
+    </clr-tab>
+  </clr-tabs>
+</div>
