voortgang generiek data table, met genoeg vragen voor mezelf

--- a/comp-mng-client/src/app/pages/competitions/competition-participate/competition-participate.component.html
+++ b/comp-mng-client/src/app/pages/competitions/competition-participate/competition-participate.component.html
@@ -1,1 +1,5 @@
-<p>competition-participate works!</p>
+<h1 class="text-center">Hier moet naam comp</h1>
+<div class="divide-height-small"></div>
+<app-interactive-table></app-interactive-table>
+
+<!--TODO: hier beginnen werken met je kadaver-->
