--- a/comp-mng-client/src/app/pages/competitions/competition-overview/competition-overview.component.html
+++ b/comp-mng-client/src/app/pages/competitions/competition-overview/competition-overview.component.html
@@ -1,5 +1,5 @@
-<h1 class="text-center">Competitie overzicht</h1>
+<h1 class="text-center">Overzicht Competities</h1>
 <div class="divide-height-small"></div>
 <app-sports-tab></app-sports-tab>
 <div class="divide-height-small"></div>
-<app-interactive-table></app-interactive-table>
+<app-interactive-table [rows]="ph_comps"></app-interactive-table>
