--- a/comp-mng-client/src/app/components/interactive-table/interactive-table.component.html
+++ b/comp-mng-client/src/app/components/interactive-table/interactive-table.component.html
@@ -1,6 +1,6 @@
 <clr-datagrid>
   <clr-dg-column *ngFor="let column of columns">{{column}}</clr-dg-column>
-  <clr-dg-row *clrDgItems="let row of rows" [clrDgItem]="row" (click)="clickedRow(row)">
+  <clr-dg-row *ngFor="let row of rows" (click)="clickedRow(row)">
     <clr-dg-cell *ngFor="let value of objectValues(row)">{{value}}</clr-dg-cell>
   </clr-dg-row>
 </clr-datagrid>
