opzet popupcomponent en forecast overview page

--- a/comp-mng-client/src/app/pages/competitions/competition-overview/competition-overview.component.html
+++ b/comp-mng-client/src/app/pages/competitions/competition-overview/competition-overview.component.html
@@ -2,4 +2,9 @@
 <div class="divide-height-small"></div>
 <app-sports-tab></app-sports-tab>
 <div class="divide-height-small"></div>
-<app-interactive-table (eventEmitter)="navToCompParticipate()" [isRowClickable]="true" [columns]="comp_columns" [rows]="ph_comps"></app-interactive-table>
+<app-interactive-table
+  (eventEmitter)="navToCompParticipate()"
+  [isRowClickable]="true"
+  [columns]="comp_columns"
+  [rows]="ph_comps">
+</app-interactive-table>
