--- a/comp-mng-client/src/app/pages/competitions/competition-participate/competition-participate.component.html
+++ b/comp-mng-client/src/app/pages/competitions/competition-participate/competition-participate.component.html
@@ -1,3 +1,7 @@
 <h1 class="text-center">Hier moet naam comp</h1>
 <div class="divide-height-small"></div>
-<app-interactive-table [isRowClickable]="false" [columns]="team_columns" [rows]="ph_teams"></app-interactive-table>
+<app-interactive-table
+  [isRowClickable]="false"
+  [columns]="team_columns"
+  [rows]="ph_teams">
+</app-interactive-table>
