--- a/comp-mng-client/src/app/pages/forecast/forecast-creation/forecast-creation.component.html
+++ b/comp-mng-client/src/app/pages/forecast/forecast-creation/forecast-creation.component.html
@@ -1,1 +1,12 @@
-<p>forecast-creation works!</p>
+<h1 class="text-center">Voorspelling maken</h1>
+<div class="divide-height-small"></div>
+<app-interactive-table
+  (eventEmitter)="onRowClick()"
+  [isRowClickable]="true"
+  [columns]="row_headers"
+  [rows]="ph_upcoming_matches">
+</app-interactive-table>
+<app-pop-up
+  (modalEvent)="onRowClick()"
+  [openModal]="isRowClicked">
+</app-pop-up>
