--- a/comp-mng-client/src/app/components/pop-up/pop-up.component.html
+++ b/comp-mng-client/src/app/components/pop-up/pop-up.component.html
@@ -5,8 +5,8 @@
   </div>
 
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline" (click)="onModalClick()">Close</button>
-    <button type="button" class="btn btn-primary" (click)="onModalClick()">Action</button>
+    <button type="button" class="btn btn-outline" (click)="onModalClick()">{{footerCancelButtonLabel}}</button>
+    <button type="button" class="btn btn-primary" (click)="onModalClick()">{{footerActionButtonLabel}}</button>
   </div>
 
 </clr-modal>
