--- a/comp-mng-client/src/app/pages/forecast/forecast-overview/forecast-overview.component.html
+++ b/comp-mng-client/src/app/pages/forecast/forecast-overview/forecast-overview.component.html
@@ -6,6 +6,13 @@
   [columns]="row_headers"
   [rows]="ph_forecasts">
 </app-interactive-table>
+
+<div class="divide-height-small"></div>
+
+<div class="clr-row clr-justify-content-center">
+  <button class="btn btn-outline" (click)="navToForecastCreation()">Voorspelling maken</button>
+</div>
+
 <app-pop-up
   (modalEvent)="randoMethod()"
   [openModal]="isRowClicked">
