--- a/comp-mng-client/src/app/pages/results/results-comp-selection/results-comp-selection.component.html
+++ b/comp-mng-client/src/app/pages/results/results-comp-selection/results-comp-selection.component.html
@@ -1,1 +1,16 @@
-<p>results-comp-selection works!</p>
+<h1 class="text-center">Competitie resultaten</h1>
+<div class="divide-height-small"></div>
+<app-sports-tab></app-sports-tab>
+<div class="divide-height-small"></div>
+<app-interactive-table
+  (eventEmitter)="onRowClick()"
+  [isRowClickable]="true"
+  [columns]="comp_columns"
+  [rows]="ph_fin_comps">
+</app-interactive-table>
+<app-pop-up
+  (modalEvent)="navToMatchResults()"
+  [openModal]="isRowClicked">
+</app-pop-up>
+
+
