--- a/comp-mng-client/src/app/pages/market/market-overview/market-overview.component.html
+++ b/comp-mng-client/src/app/pages/market/market-overview/market-overview.component.html
@@ -1,1 +1,18 @@
-<p>market-overview works!</p>
+<h1 class="text-center">Marktplaats</h1>
+<div class="divide-height-small"></div>
+<app-sports-tab></app-sports-tab>
+<div class="divide-height-small"></div>
+<app-interactive-table
+  (eventEmitter)="onRowClick()"
+  [isRowClickable]="true"
+  [columns]="market_columns"
+  [rows]="ph_market_rows">
+</app-interactive-table>
+<div class="divide-height-small"></div>
+<div class="clr-row clr-justify-content-center">
+  <button class="btn btn-outline" (click)="onAanbodClick()">Aanbod plaatsen</button>
+</div>
+<app-pop-up
+  (modalEvent)="onRowClick()"
+  [openModal]="isRowClicked">
+</app-pop-up>
