--- a/comp-mng-client/src/app/app.component.html
+++ b/comp-mng-client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
   <app-app-header></app-app-header>
-  <div class="content-container clr-justify-content-center">
+  <div class="content-container clr-justify-content-center lr-padding">
     <router-outlet></router-outlet>
   </div>
 </div>
