--- a/comp-mng-client/src/app/pages/manual/manual-overview/manual-overview.component.html
+++ b/comp-mng-client/src/app/pages/manual/manual-overview/manual-overview.component.html
@@ -1,1 +1,30 @@
-<p>manual-overview works!</p>
+<h1 class="text-center">Waar wil je uitleg over?</h1>
+
+<app-nav-card
+  [cardTitle]="ct_competition"
+  [cardText]="ctxt_competition"
+  [navPath]="m_competionPath"
+  [isRelativePath]="true">
+</app-nav-card>
+
+<app-nav-card
+  [cardTitle]="ct_teams"
+  [cardText]="ctxt_teams"
+  [navPath]="m_teamsPath"
+  [isRelativePath]="true">
+</app-nav-card>
+
+<app-nav-card
+  [cardTitle]="ct_forecast"
+  [cardText]="ctxt_forecast"
+  [navPath]="m_forecastPath"
+  [isRelativePath]="true">
+</app-nav-card>
+
+<app-nav-card
+  [cardTitle]="ct_market"
+  [cardText]="ctxt_market"
+  [navPath]="m_marketPath"
+  [isRelativePath]="true">
+</app-nav-card>
+
