removed duplicate styles to one file + added manuals

--- a/comp-mng-client/src/app/pages/manual/manual-compete/manual-compete.component.html
+++ b/comp-mng-client/src/app/pages/manual/manual-compete/manual-compete.component.html
@@ -1,1 +1,35 @@
-<p>manual-compete works!</p>
+<div class="content-area">
+  <h3 class="text-center">Competitie uitleg</h3>
+  <h4>Hoe het werkt</h4>
+  <p>Allerlei sporten werken met competities. Een competitie is een wedstrijdsysteem met teams die een x aantal keer tegen elkaar spelen.</p>
+  <p>Je hoeft zelf geen competities aan te maken, sterker nog, dat kan jij als gebruiker niet.</p>
+  <p>Dat geeft niet, het wordt voor je gedaan. Eens in de zoveel tijd zal het systeem een competitie klaarzetten voor elke sport.</p>
+  <p>Eenmaal er een competitie klaarstaat, kunnen er teams toegevoegd worden. Daar hebben we jou wel bij nodig.</p>
+  <p>In het competitie overzicht is er te zien welke competities er klaarstaan, waar dus teams nog aan toegevoegd worden</p>
+  <p>Zit de competitie vol? Dan zal die automatisch beginnen en uit het overzichtslijst verdwijnen</p>
+  <p>Zit de competitie nog niet vol maar de tijd is om? Dan gaat die beginnen met het aantal teams die zich hebben toegevoegd...</p>
+  <p>Al zijn er wel minimaal 4 teams nodig om een competitie te beginnen, anders gaat de competitie niet door en verdwijnt die ook.</p>
+  <p>Hieronder hebben we het meedoen aan een competitie in een stappenplan uitglegd, met wat beeldmateriaal natuurlijk ;)</p>
+
+  <h4>Meedoen aan competities</h4>
+  <p>Het meedoen aan de competities doe je aan de hand van de volgende stappen.</p>
+  <ol cds-list>
+    <li>Naar de competitie overzichtspagina gaan</li>
+<!--    TODO: comp card screenshot toevoegen. Staat in assets/manual-screens/overview_comp_card.png-->
+    <li>Op het overzicht pagina eventueel een sport kiezen bovenin de pagina</li>
+<!--    TODO: screenshot toevoegen: assets/manual-screens/choose_sport.png-->
+    <li>In het tabel een competitie kiezen door een rij aan te klikken</li>
+<!--    TODO: screenshot toevoegen-->
+    <p>Let wel! Je kan alleen een competitie kiezen die nog niet vol zit.</p>
+    <br>
+    <li>In de pop up kies je een team die je hebt om toe te voegen aan de competitie</li>
+<!--    TODO: screenshot toevoegen-->
+    <p>Let wel! Als je geen teams hebt, kan je ook niks toevoegen</p>
+    <br>
+    <li>Na het kiezen van een team en deze toe te voegen zie je deze terug in de competitie</li>
+<!--    TODO: screenshot toevoegen-->
+  </ol>
+
+<!--  TODO: terug button integreren-->
+</div>
+
