--- a/comp-mng-client/src/app/pages/manual/manual-forecast/manual-forecast.component.html
+++ b/comp-mng-client/src/app/pages/manual/manual-forecast/manual-forecast.component.html
@@ -1,1 +1,14 @@
-<p>manual-forecast works!</p>
+<div class="content-area">
+  <h3 clas="text-center">Voorspellen uitleg</h3>
+  <p>Hier gaan we je uitleggen hoe je voorspellingen doet</p>
+  <p>Als eerst ga je naar het voorspellingsoverzicht</p>
+<!--  TODO: screenshot-->
+  <p>Onderaan vind je de knop 'Voorspelling Maken'</p>
+<!--  TODO: screenshot-->
+  <p>Dan zie je een overzicht van aankomende wedstrijden</p>
+<!--  TODO: screenshot-->
+  <p>Klik op een rij om op die wedstrijd een voorspelling te maken</p>
+  <p>Je krijgt dan een pop-up waarin je de soort voorspelling kan kiezen</p>
+<!--  TODO: screenshot-->
+  <p>Eenmaal aangemaakt, zal deze terug te zien zijn in het overzicht</p>
+</div>
