--- a/comp-mng-client/src/app/pages/manual/manual-market/manual-market.component.html
+++ b/comp-mng-client/src/app/pages/manual/manual-market/manual-market.component.html
@@ -1,1 +1,9 @@
-<p>manual-market works!</p>
+<div class="content-area">
+  <h3 class="text-center">Markt uitleg</h3>
+  <h4>Teams kopen</h4>
+  <p>dikke kaas</p>
+
+  <br>
+  <h4>Teams verkopen</h4>
+  <p>dunne ham</p>
+</div>
