--- a/comp-mng-client/src/app/pages/manual/manual-teams/manual-teams.component.html
+++ b/comp-mng-client/src/app/pages/manual/manual-teams/manual-teams.component.html
@@ -1,1 +1,17 @@
-<p>manual-teams works!</p>
+<div class="content-area">
+  <h3 class="text-center">Teams uitleg</h3>
+  <p>Als je op het teams kaartje klikt krijg je een overzicht te zien van jouw teams</p>
+<!--  TODO: screenshot-->
+  <p>Hier zie je de naam, onder welke sport je team valt, of die meedoet aan een competitie</p>
+  <p>en het totaal aan gewonnen, gelijk gespeelde en verloren wedstrijden</p>
+  <p>Zit je nog niet aan het totaal aantal teams wat je mag hebben, dan kan je teams toevoegen</p>
+<!--  TODO: screenshot-->
+  <p>Hier kan je een sport kiezen en de naam van een team invoeren</p>
+<!--  TODO: screenshot-->
+  <p>Mocht je meerdere teams willen aanmaken dan klik je op het plus icoontje</p>
+<!--  TODO: screenshot-->
+  <p>Daarnaast ook op het min icoontje mocht je er toch minder willen aanmaken</p>
+<!--  TODO: screenshot-->
+  <p>Na het drukken op 'Aanmaken' zullen de teams worden aangemaakt en zijn ze terug te zien in het overzicht</p>
+<!--  TODO: screenshot-->
+</div>
