--- a/comp-mng-client/src/styles.css
+++ b/comp-mng-client/src/styles.css
@@ -1,4 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
+  outline: none !important;
+}
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.divide-height-small {
+  height: 40px;
+}
