manual texts complete- screenshots will be added after other functionality is finished

--- a/comp-mng-client/src/app/pages/manual/manual-market/manual-market.component.html
+++ b/comp-mng-client/src/app/pages/manual/manual-market/manual-market.component.html
@@ -1,9 +1,43 @@
 <div class="content-area">
   <h3 class="text-center">Markt uitleg</h3>
+  <h4>Hoe het werkt</h4>
+  <p>
+    De markt. Nee je kan er niet de kitsch van je oma verkopen.<br>
+    Het draait het allemaal om het kopen en verkopen van teams.<br>
+    Als je een team wilt kopen, moet je natuurlijk wel de kosten kunnen dekken.<br>
+    Als je een beetje hebt opgelet, dan heb ik het elders over punten gehad.<br>
+    Hier komen ze onder andere héél erg goed van pas.<br>
+    Met die punten kan je namelijk teams van anderen kopen.<br>
+    Je kan echter niets kopen als je al het maximaal aantal teams hebt.<br>
+    Dat is overigens per sport. Mocht je dat nog niet verteld zijn.<br>
+    Je kan ook een team aanbieden op de markt zodat andere die kunnen kopen.<br>
+    Let wel! Teams die in een competitie spelen kunnen niet op de markt geplaatst worden.<br>
+    Anderzijds kunnen teams die op de marktplaats staan niet gebruikt worden in competities.<br>
+    Hieronder hebben we wat beeldmateriaal met de fijnere details voor je geplaatst ;).
+  </p>
   <h4>Teams kopen</h4>
-  <p>dikke kaas</p>
+  <p>Eerste wat je doet om teams te kopen is naar de markt gaan.</p>
+<!--    TODO: screenshot-->
+  <p>Dan kan je eventueel bovenin een sport kiezen waarvan je teams wilt kopen.</p>
+<!--  TODO: screenshot-->
+  <p>Dan zie je in een rij informatie over het team wat te koop staat.</p>
+<!--  TODO: screenshot-->
+  <p>Als je genoeg punten hebt, dan klik je op een rij om het team te kopen.</p>
+<!--  TODO: screenshot-->
+  <p>Dan krijg je nog een pop-up om je aankoop te bevestigen.</p>
+<!--  TODO: screenshot-->
+  <p>Eenmaal gekocht, krijg je dit team te zien in je team overzicht.</p>
 
   <br>
+
   <h4>Teams verkopen</h4>
-  <p>dunne ham</p>
+  <p>Als je op de markplaats bent, zie je natuurlijk het aanbod.</p>
+<!--  TODO: screenshot-->
+  <p>Onderaan kan je op de 'Aanbod Plaatsen' knop drukken om dat dus te doen.</p>
+<!--  TODO: screenshot-->
+  <p>Dan krijg je een overzicht te zien van jouw teams.</p>
+<!--  TODO: screenshot-->
+  <p>Klik op een rij om een pop-up te krijgen waar je een prijs kan invullen.</p>
+<!--  TODO: screenshot-->
+  <p>Na het plaatsen zal jouw team terug te zien zijn in de marktplaats.</p>
 </div>
