user competition info goed weergeven met standaard sport voetbal next: bij klikken sport tab -> tabel updaten met juiste competities

--- a/comp-mng-client/src/app/pages/competitions/competition-overview/competition-overview.component.html
+++ b/comp-mng-client/src/app/pages/competitions/competition-overview/competition-overview.component.html
@@ -6,7 +6,7 @@
   (eventEmitter)="onRowClick()"
   [isRowClickable]="true"
   [columns]="comp_columns"
-  [rows]="ph_comps">
+  [rows]="competitions">
 </app-interactive-table>
 <app-pop-up
   (modalEvent)="navToCompParticipate()"
