--- a/comp-mng-client/src/app/pages/results/results-comp-selection/results-comp-selection.component.html
+++ b/comp-mng-client/src/app/pages/results/results-comp-selection/results-comp-selection.component.html
@@ -5,8 +5,8 @@
 <app-interactive-table
   (eventEmitter)="onRowClick()"
   [isRowClickable]="true"
-  [columns]="comp_columns"
-  [rows]="ph_fin_comps">
+  [columns]="comp_columns">
+<!--  TODO: row data toevoegen-->
 </app-interactive-table>
 <app-pop-up
   (modalEvent)="navToMatchResults()"
