bij klikken sport tab -> tabel updaten met juiste competities next: nieuwe branch - team kunnen aanmaken als gebruiker

--- a/comp-mng-client/src/app/components/sports-tab/sports-tab.component.html
+++ b/comp-mng-client/src/app/components/sports-tab/sports-tab.component.html
@@ -1,7 +1,7 @@
 <div class="clr-row clr-justify-content-center">
   <clr-tabs>
     <clr-tab *ngFor="let name of sport_names;">
-      <button clrTabLink>{{name}}</button>
+      <button clrTabLink (click)="clickedSport(name)">{{name}}</button>
     </clr-tab>
   </clr-tabs>
 </div>
