--- a/comp-mng-client/src/app/pages/competitions/competition-overview/competition-overview.component.html
+++ b/comp-mng-client/src/app/pages/competitions/competition-overview/competition-overview.component.html
@@ -1,6 +1,8 @@
 <h1 class="text-center">Overzicht Competities</h1>
 <div class="divide-height-small"></div>
-<app-sports-tab></app-sports-tab>
+<app-sports-tab
+  (sportNameEmitter)="retrieveCompetitions($event)">
+</app-sports-tab>
 <div class="divide-height-small"></div>
 <app-interactive-table
   (eventEmitter)="onRowClick()"
