team kunnen aanmaken als gebruiker - 70%

--- a/comp-mng-client/src/app/pages/competitions/competition-participate/competition-participate.component.html
+++ b/comp-mng-client/src/app/pages/competitions/competition-participate/competition-participate.component.html
@@ -2,6 +2,5 @@
 <div class="divide-height-small"></div>
 <app-interactive-table
   [isRowClickable]="false"
-  [columns]="team_columns"
-  [rows]="ph_teams">
+  [columns]="team_columns">
 </app-interactive-table>
