--- a/comp-mng-client/src/app/pages/forecast/forecast-creation/forecast-creation.component.html
+++ b/comp-mng-client/src/app/pages/forecast/forecast-creation/forecast-creation.component.html
@@ -3,8 +3,7 @@
 <app-interactive-table
   (eventEmitter)="onRowClick()"
   [isRowClickable]="true"
-  [columns]="row_headers"
-  [rows]="ph_upcoming_matches">
+  [columns]="row_headers">
 </app-interactive-table>
 <app-pop-up
   (modalEvent)="onRowClick()"
