--- a/comp-mng-client/src/app/pages/forecast/forecast-overview/forecast-overview.component.html
+++ b/comp-mng-client/src/app/pages/forecast/forecast-overview/forecast-overview.component.html
@@ -3,8 +3,7 @@
 <app-interactive-table
   (eventEmitter)="randoMethod()"
   [isRowClickable]="true"
-  [columns]="row_headers"
-  [rows]="ph_forecasts">
+  [columns]="row_headers">
 </app-interactive-table>
 
 <div class="divide-height-small"></div>
