--- a/comp-mng-client/src/app/pages/leaderboard/leaderboard.component.html
+++ b/comp-mng-client/src/app/pages/leaderboard/leaderboard.component.html
@@ -2,6 +2,5 @@
 <div class="divide-height-small"></div>
 <app-interactive-table
   [isRowClickable]="false"
-  [columns]="table_headers"
-  [rows]="ph_leaderboard">
+  [columns]="table_headers">
 </app-interactive-table>
