--- a/comp-mng-client/src/app/pages/market/market-overview/market-overview.component.html
+++ b/comp-mng-client/src/app/pages/market/market-overview/market-overview.component.html
@@ -5,8 +5,7 @@
 <app-interactive-table
   (eventEmitter)="onRowClick()"
   [isRowClickable]="true"
-  [columns]="market_columns"
-  [rows]="ph_market_rows">
+  [columns]="market_columns">
 </app-interactive-table>
 <div class="divide-height-small"></div>
 <div class="clr-row clr-justify-content-center">
