--- a/comp-mng-client/src/app/pages/market/trade-creation/trade-creation.component.html
+++ b/comp-mng-client/src/app/pages/market/trade-creation/trade-creation.component.html
@@ -3,8 +3,7 @@
 <app-interactive-table
   (eventEmitter)="onRowClick()"
   [isRowClickable]="true"
-  [columns]="team_columns"
-  [rows]="ph_team_offer">
+  [columns]="team_columns">
 </app-interactive-table>
 <app-pop-up
   (modalEvent)="onRowClick()"
