--- a/comp-mng-client/src/app/pages/teams/team-overview/team-overview.component.html
+++ b/comp-mng-client/src/app/pages/teams/team-overview/team-overview.component.html
@@ -6,7 +6,7 @@
 <app-interactive-table
   [isRowClickable]="false"
   [columns]="team_columns"
-  [rows]="ph_teams">
+  [rows]="teams">
 </app-interactive-table>
 
 <button class="btn btn-link" (click)="navToTeamCreation()">Teams aanmaken</button>
