--- a/comp-mng-client/src/app/pages/results/results-match-overview/results-match-overview.component.html
+++ b/comp-mng-client/src/app/pages/results/results-match-overview/results-match-overview.component.html
@@ -2,8 +2,7 @@
 <div class="divide-height-small"></div>
 <app-interactive-table
   [isRowClickable]="false"
-  [columns]="colums"
-  [rows]="ph_match_results">
+  [columns]="colums">
 </app-interactive-table>
 <div class="divide-height-small"></div>
 <div class="clr-row clr-justify-content-center">
