cleanups -- todo's weggehaald

--- a/comp-mng-client/src/app/pages/competitions/single-comp-view/single-competition-overview.component.html
+++ b/comp-mng-client/src/app/pages/competitions/single-comp-view/single-competition-overview.component.html
@@ -2,5 +2,6 @@
 <div class="divide-height-small"></div>
 <app-interactive-table
   [isRowClickable]="false"
-  [columns]="team_columns">
+  [columns]="team_columns"
+  [rows]="teams">
 </app-interactive-table>
